--- a/index.html
+++ b/index.html
@@ -4,19 +4,182 @@
   <meta charset="UTF-8">
   <title>A Document Demo</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="interface.css">
 </head>
+<script src="https://unpkg.com/pagedjs/dist/paged.polyfill.js"></script>
 <body>
-  <h1>What Is a “Document”?</h1>
-  <p><strong>By Michael K. Buckland</strong></p>
-  <p>Original paper located <a href="https://asistdl.onlinelibrary.wiley.com/doi/10.1002/%28SICI%291097-4571%28199709%2948%3A9%3C804%3A%3AAID-ASI5%3E3.0.CO%3B2-V">here</a>.</p>
 
-  <p><em>Ordinarily the word “document” denotes a textual record. Increasingly sophisticated attempts to provide access to the rapidly growing quantity of available documents raised questions about what should be considered a “document.” The answer is important for any definition of the scope of Information Science. Paul Otlet and others developed a functional view of “document” and discussed whether, for example, sculpture, museum objects, and live animals, could be considered “documents.” Suzanne Briet equated “document” with organized physical evidence. These ideas appear to resemble notions of “material culture” in cultural anthropology and “object-as-sign” in semiotics. Others, especially in the U.S.A. (e.g., Jesse Shera and Louis Shores) took a narrower view. New digital technology renews old questions and also old confusions between medium, message, and meaning.</em></p>
+  <section id="p1">
+    <img class="full" src="image/cover.png">
+    
+  </section>
+
+  <section id="p2">
+    <img class="p2_main_image" src="image/eye2.png" >
+    <div class="p2_text">
+      <h1>
+        Virtual <br>
+      Influencers
+      </h1>
+    </div> 
+  </section>
+
+  <section id="p3">
+    <img class="p3_main_image" src="image/eye1.png" >
+    <img class="p3_sub_image" src="image/rept.png" >
+  </section>
+
+  <section id="p4">
+    <img class="full" src="image/1.png">
+    <div class="p4_text">
+      <h2>
+        What is a virtual influencer
+      </h2>
+      <p>Definition from <a href="https://en.wikipedia.org/wiki/Virtual_influencer">here</a>.</p>
+      <p>
+        <em>A virtual influencer, at times described as a virtual persona or virtual model, is a computer-generated fictional character that can be used for a variety of marketing-related purposes, but most frequently for social media marketing, in lieu of human "influencers". Most virtual influencers are designed using computer graphics and motion capture technology to resemble real people in realistic situations. Common derivatives of virtual influencers include VTubers, which broadly refer to online entertainers and YouTubers who represent themselves using virtual avatars instead of their physical selves.</em>
+      </p>
+      <hr>
+    </div>
+  </section>
+
+  <section id="p5"> 
+    <img class="full" src="image/2.png">
+    <div class="p5_text">
+      <h2>
+        History
+      </h2>
+      <p>
+        <em>Virtual influencers are fundamentally synonymous with virtual idols, which originate from Japan's anime and Japanese idol culture that dates back to the 1980s. The first virtual idol created was Lynn Minmay, a fictional singer and main character of the anime television series Super Dimension Fortress Macross (1982) and the animated film adaptation Macross: Do You Remember Love? (1984). Minmay's success led to the production of more Japanese virtual idols, such as EVE from the Japanese cyberpunk anime Megazone 23 (1985), and Sharon Apple in Macross Plus (1994). Virtual idols were not always well received – in 1995, Japanese talent agency Horipro created Kyoko Date, which was inspired by the Macross franchise and dating sim games such as Tokimeki Memorial (1994). Date failed to gain commercial success despite drawing headlines for her debut as a CGI idol, largely due to technical limitations leading to issues such as unnatural movements, an issue also known as the uncanny valley.
+          Since their inception, many virtual idols created have achieved continual success, with notable names including the Vocaloid singer Hatsune Miku, and the virtual YouTuber Kizuna AI. Technological advancements have also enabled production teams to use artificial intelligence and advanced techniques to customize the personalities and behavior of virtual idols.</em>
+      </p>
+      <hr>
+    </div>
+  </section>
+
+  <section id="p6">
+    <img class="p6_mainimage" src="image/6m.png" >
+    <!-- <img class="p6_firstimage" src="image/a.jpg" >
+    <img class="p6_secondimage" src="image/b.jpg" > -->
+  </section>
+
+  <section id="p7">
+    <img class="p7_mainimage" src="image/7m.png" >
+  </section>
+
+  <section id="p8">
+    <div class="p8_text">
+      <h2>
+        WHAT ARE THE MAIN PROS OF VIRTUAL INFLUENCERS? WHY DID THEY BECOME SO POPULAR?
+      </h2>
+      <p>Original interview can be found <a href="https://ffface.me/media/why-virtual-influencers-are-here-to-stay/#:~:text=WHY%20DID%20THEY%20BECOME%20SO,just%20to%20show%20their%20hate.">here</a>.</p>
+      <p>
+        Virtual influencers became so popular because they’re original and drawing attention to themselves. Some people love it, and repost them. On the other hand, some people hate them, but still share information as well, just to show their hate. A lot of people were not able to be neutral about virtual influencers, and it’s a key. Most of the audience shows at least some reaction and it helps in organical promotion.
+          In my opinion the main benefit of virtual influencers for brands is their flexibility. Their total flexibility in terms of fulfilling goals and tasks of the brand. Virtual influencers can’t be sick, they can’t be in a bad mood, and they can’t do technical tasks wrong because they’re under total control. So, for the brand, virtual influencers have two main benefits: first of all, total control, and the second one is that they get more attention. According to recent reports from HypeAuditor, virtual influencers have three times more engagement than real-life influencers with the same size of the audience.
+      </p>
+    </div>
+  </section>
+
+  <section id="p9">
+    <img class="p9_mainimage" src="image/9m.jpeg" >
+    <div class="p9_text">
+      <h2>
+        ARE VIRTUAL INFLUENCERS A GREAT FIT FOR ANY BRAND? OR ARE THERE ANY SPECIFIC BRAND CATEGORIES, LIKE FASHION, BEAUTY, OR ANYTHING ELSE THAT WORK BETTER WITH VIRTUAL INFLUENCERS?
+      </h2>
+      <p>
+        I believe that virtual influencers are similar to regular influencers, that means they can work for any category. I can imagine political virtual influencers, or virtual influencers that review some new gadgets and devices, or share some tips on musical playlists. However, we need to acknowledge that in terms of virtual influencers, the visual part is very important. Visual part is something that usually makes a difference. Virtual influencers are more efficient in promoting visual products, like fashion or beauty products. In that case, the product will be in the focus along with other parts of the visual.
+      </p>
+    </div>
+  </section>
+
+  <section id="p10">
+    <div class="p10_text">
+      <h2>
+        THERE ARE MANY COMMUNICATION CHANNELS AND INSTRUMENTS THAT BRANDS CAN USE. WHEN ARE VIRTUAL INFLUENCERS THE BEST CHOICE? WHAT ARE THE COMMUNICATION GOALS THAT THEY CAN HELP WITH BEST?
+      </h2>
+      <p>
+        I believe that virtual influencers can work within all communication ecosystems. Virtual influencers can be perceived in two ways: first, is a new anthropomorphic brand media that can own different social networks, and that can work within different social media. And second, is that a virtual influencer can be a brand`s mascot. That is why it can be present in outdoor advertising and in-store, on-trade, and off-trade promotion. So, from my perspective, to sum up, virtual influencers can be a part of the communication on all channels, similar to regular influencers.<br>
+I also believe that they can generate both: awareness and conversions, if they engage users in conversions. For example, we can launch a promo with a virtual influencer, where they will be a part of the mood board, or we can launch a promo on Instagram, where they will review the product, and announce the promo which will allow users to receive something in exchange for an action. A virtual influencer can suggest people to watch a video, tap on the link, fill out the form, receive a discount or go to an offline store to make a purchase. In terms of communication goals and communication types, virtual influencers can do pretty much anything real-life influencers can do.
+      </p>
+    </div>
+  </section>
+
+  <section id="p11">
+    <div class="p11_text">
+      <h2>
+        WHAT ARE YOUR TOP-3 TIPS FOR BRANDS WHO WANT TO COLLABORATE WITH AN EXISTING VIRTUAL INFLUENCER?
+      </h2>
+      <p>
+        Regarding tips for brands that want to start working with virtual influencers, I would say they can use the same tips that they use with regular influencers. First of all, an influencer should be relevant. The fact that the influencer is virtual is not enough for the communication to be successful. So the story behind this virtual influencer should correspond with the story of the selected communication platform that you’re having with your brand right now.<br>
+The second tip: even though it’s a virtual influencer, your communication should still look organic. Giving your product to an influencer, taking a couple of photos, and saying it’s working is not enough. No, you should come up with some story. For example, in terms of our collaboration with a Bird app, an app that helps people to find apartments, we integrated the whole thing into the story of our virtual influencer Astra. When she moved to Ukraine, she was living in a hotel, and at some point, she decided to find a new apartment to rent. So she used the Bird app and she found the apartment and organically showed the whole process of how it happened. Also, we made it even more organic, because before the launch of this communication we made a survey among the Astra subscribers, and we asked them: «Okay, guys, how do you find an apartment nowadays?». And most of the followers answered that it was through the Bird app. So, we made a pre-communication, we showcased the process of using this product, and then we showed the result, which was Astra being in a new beautiful apartment.<br>
+Third tip: you have to try to make this partnership long-term. Because a single communication, even with real-life influencers, is not efficient. We all know that it’s not about the number of contacts with the audience, it’s about the quantity of these contacts with each consumer. So, you have to create a long-term plan of how you will work with these virtual influencers during different seasons and occasions.
+      </p>
+    </div>
+
+    <div class="p11_subtext">
+      <p>
+        Interview with Dmitry Kornilov, CEO and CO-founder of FFFACE.ME. <br>
+        by Nataly Novokhatnya, Head of PR
+      </p>
+    </div>
+  </section>
+
+  <section id="p12">
+    <img class="p12_mainimage" src="image/balmain.png" >
+  </section>
+
+  <section id="p13">
+    <img class="p13_mainimage" src="image/balmain_logo.png" >
+    <div class="p13_text">
+      <h2>
+        BALMAIN: “Virtual Army”
+      </h2>
+      <p>
+        Balmain has introduced a new gang of supermodels—but, they're not real. This season, creative director Olivier Rousteing has opted for a "virtual army" of digitally manufactured models to wear his newest collection.
+"Anyone and everyone is always welcome to join Balmain army's growing ranks — they need only share our bold spirit of adventure as our new virtual icons, Margot, Shudu and Zhi who mirror the beauty, the rock style and the confident power," says Balmain's official website.
+Balmain's Rousteing is known for his edgy style and focus on bringing the French fashion house to the forefront of the digital age. "We need to change. We need to push boundaries. We need to talk to the new generation. We need to make fashion relevant," he said in a video for the New York Times last year.
+Earlier this year, Rousteing created "My City of Lights," which is a virtual reality experience and headset to help people understand his creative process. In a promo video for Balmain, he says he wanted to help "bridge the gap between fashion and technology."
+
+      </p>
+    </div>
+  </section>
+
+  <section id="p14">
+    <img class="full" src="image/14.png">
+  </section>
+
+  <section id="p15">
+    <img class="full" src="image/15.png">
+  </section>
+
+  <section id="p16">
+    <img class="full" src="image/cover.png" style="rotate: 180deg;">
+  </section>
+
+  <!-- template code 
+  <figure>
+    <img src="image/cover.png">
+  </figure>
+  <h1>Virtual Influencers</h1>
+  <p><strong>What is a Virtual Influencer?</strong></p>
+  <p>Definition from <a href="https://en.wikipedia.org/wiki/Virtual_influencer">here</a>.</p>
+
+  <p><em>A virtual influencer, at times described as a virtual persona or virtual model, is a 
+    computer-generated fictional character that can be used for a variety of marketing-related purposes, 
+    but most frequently for social media marketing, in lieu of human "influencers". Most virtual influencers 
+    are designed using computer graphics and motion capture technology to resemble real people in realistic 
+    situations. Common derivatives of virtual influencers include VTubers, which broadly refer to online 
+    entertainers and YouTubers who represent themselves using virtual avatars instead of their physical selves.</em></p>
 
   <hr>
 
   <h2>Introduction</h2>
 
-  <p>What is a document? What could not be a document? Ordinarily information storage and retrieval systems have been concerned with text and text-like records (e.g., names, numbers, and alphanumeric codes). The present interest in “multimedia” reminds us that not all phenomena of interest in information science are textual or textlike. We may need to deal with any phenomena that someone may wish to observe: Events, processes, images, and objects as well as texts.</p>
+  <p>What is a Virtual Influencer? Why are they becoming so popular? Ordinarily information storage and retrieval 
+    systems have been concerned with text and text-like records (e.g., names, numbers, and alphanumeric codes). 
+    The present interest in “multimedia” reminds us that not all phenomena of interest in information science are 
+    textual or textlike. We may need to deal with any phenomena that someone may wish to observe: Events, processes, 
+    images, and objects as well as texts.</p>
 
   <figure>
     <img src="braid.jpg">
@@ -291,6 +454,6 @@
 
     </ol>
   </div>
-
+-->
 </body>
 </html>
